# Copyright 2023 The TensorFlow Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@python_version_repo//:py_version.bzl", "REQUIREMENTS")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# TODO(ybaturina): Remove once TF is migrated to CUDA 12.9.
genrule(
    name = "nvidia_constraints",
    srcs = ["nvidia-requirements.txt"],
    outs = ["nvidia-constraints.txt"],
    cmd = """sed -E "s/>=/==/" $(location nvidia-requirements.txt) > $@;""",
)

compile_pip_requirements(
    name = "requirements",
    srcs = [
        "nvidia-requirements.txt",
        "requirements.in",
        ":nvidia_constraints",
    ],
    extra_args = [
        "--allow-unsafe",
        "--build-isolation",
        "--rebuild",
        "-c $(location :nvidia_constraints)",
    ],
    generate_hashes = True,
    requirements_txt = REQUIREMENTS,
)
